Bug 81097 - ShadowRoot.activeElement should be null if it does not contain a focused element.
Summary: ShadowRoot.activeElement should be null if it does not contain a focused elem...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Hayato Ito
URL:
Keywords:
Depends on:
Blocks: 63601
  Show dependency treegraph
 
Reported: 2012-03-14 05:58 PDT by Hayato Ito
Modified: 2012-03-14 20:07 PDT (History)
8 users (show)

See Also:


Attachments
Return null (8.25 KB, patch)
2012-03-14 06:15 PDT, Hayato Ito
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Hayato Ito 2012-03-14 05:58:59 PDT
Although I've just filed a bug for the Shadow DOM spec (see the bellow), I think shadowRoot.activeElement should be null if it does not contain a focused element.

http://dvcs.w3.org/hg/webcomponents/raw-file/tip/spec/shadow/index.html#active-element
https://www.w3.org/Bugs/Public/show_bug.cgi?id=16365

The current implementation of ShadowRoot.activeElement may return a focused element which is outside of ShadowRoot.
Comment 1 Hayato Ito 2012-03-14 06:15:29 PDT
Created attachment 131833 [details]
Return null
Comment 2 WebKit Review Bot 2012-03-14 20:07:06 PDT
Comment on attachment 131833 [details]
Return null

Clearing flags on attachment: 131833

Committed r110810: <http://trac.webkit.org/changeset/110810>
Comment 3 WebKit Review Bot 2012-03-14 20:07:11 PDT
All reviewed patches have been landed.  Closing bug.