Make ShadowRoot.activeElement return null if it does not contain a focused element. https://bugs.webkit.org/show_bug.cgi?id=81097

Reviewed by Dimitri Glazkov.

Source/WebCore:

* dom/TreeScope.cpp:
(WebCore::TreeScope::activeElement):

LayoutTests:

* fast/dom/shadow/shadow-root-activeElement-expected.txt:
* fast/dom/shadow/shadow-root-activeElement.html:


Canonical link: https://commits.webkit.org/98373@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110810 268f45cc-cd09-0410-ab3c-d52691b4dbfc